namespace sf.systems.rentals.cars
{
    public enum EntityType
    {
        CUSTOMER,
        CAR,
        TRANSACTION
    }
}
